--- a/Javascript/Example/Prototype/selectbox/select.html
+++ b/Javascript/Example/Prototype/selectbox/select.html
@@ -184,11 +184,11 @@ ul {
 
 		this.activateClass = 'active';
 
-		this.initialize(opts);
+		this.initialize();
 	}
 
 	Select.prototype = {
-		initialize: function(opts) {
+		initialize: function() {
 			// Set elements
 			this.setElements();
 
